...

    <LinearLayout
        android:id="@+id/screen_chats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

        <LinearLayout
            android:id="@+id/chat_anna"
            android:layout_width="match_parent"
            android:layout_height="82dp"
...

        <LinearLayout
            android:id="@+id/chat_lena"
            android:layout_width="match_parent"
            android:layout_height="72dp"
...

                <TextView
                    android:id="@+id/chat_lena_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/chat_anne"
            android:layout_width="match_parent"
            android:layout_height="72dp"
...

                <TextView
                    android:id="@+id/chat_anne_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/chat_anni"
            android:layout_width="match_parent"
            android:layout_height="72dp"
...

                <TextView
                    android:id="@+id/chat_anni_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/chat_project"
            android:layout_width="match_parent"
            android:layout_height="72dp"
...

        <LinearLayout
            android:id="@+id/chat_mila"
            android:layout_width="match_parent"
            android:layout_height="72dp"
...

        <LinearLayout
            android:id="@+id/chat_jonas"
            android:layout_width="match_parent"
            android:layout_height="72dp"
...

            <Button
                android:id="@+id/btn_back_to_chats"
                android:layout_width="54dp"
                android:layout_height="48dp"
...

            <TextView
                android:id="@+id/chat_header_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/chat_input_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/message_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
...

            <Button
                android:id="@+id/btn_send"
                android:layout_width="96dp"
                android:layout_height="48dp"
...
